--- a/Devoir/Exercice1/images.html
+++ b/Devoir/Exercice1/images.html
@@ -5,6 +5,6 @@
     <title>Home</title>
 </head>
 <body>
-    <img src="my.jpg" alt="image en cours de chargement">
+    <img src="OIP.jpeg" alt="image en cours de chargement" >
 </body>
 </html>
