--- a/Devoir/Exercice1/synthese.html
+++ b/Devoir/Exercice1/synthese.html
@@ -37,7 +37,7 @@
             Arda Guler
         </li>
     </ul>
-    <img src="my.jpg" alt="image en cours de chargement"><br><br>
+    <img src="OIP.jpeg" alt="image en cours de chargement"><br><br>
     <a href="images.html">click here</a><br><br>
     <table>
         <tr>
